--- a/cfg.conf
+++ b/cfg.conf
@@ -1,19 +1,25 @@
 # EXAMPLE CONFIGURATION FILE
 
-IN C:\Users\Benjamin\OneDrive\Documents
-OUT D:\Documents
+#IN C:\Users\Benjamin\OneDrive\Documents
+#OUT D:\TEST\Documents
 
-IN C:\Users\Benjamin\OneDrive\Desktop
-OUT D:\Desktop
+IN C:\Users\Benjamin\OneDrive\Documents
+OUT X:\Documents
+
+IN C:\Users\Benjamin\OneDrive\Documents
+OUT Z:\Documents
 
 IN C:\Users\Benjamin\OneDrive\Music
-OUT D:\Music
+OUT X:\Music
 
 IN C:\Users\Benjamin\OneDrive\Pictures
-OUT D:\Pictures
+OUT X:\Pictures
 
-IN C:\Users\Benjamin\OneDrive\Documents
-OUT J:\Documents
+IN C:\Users\Benjamin\OneDrive\Pictures
+OUT Z:\Pictures
 
-IN E:\Games\Steam
-OUT X:\Games\Steam
+IN F:\Archives
+OUT X:\Archives
+
+IN E:\Games
+OUT X:\Games
